--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^12.0.10",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "pg-promise": "^8.7.2",
     "pgpromise": "^0.1.1"
   }
 }
