--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg-promise": "^8.7.2",
-    "pgpromise": "^0.1.1"
+    "pgpromise": "^0.1.1",
+    "sequelize": "^5.9.2"
   }
 }
