--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/ChikamaYan/softwire-bookish#readme",
   "dependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/node": "^12.0.10",
+    "@types/validator": "^10.11.1",
     "csv-parser": "^2.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
